--- a/usr/asubst/History.txt
+++ b/usr/asubst/History.txt
@@ -1,5 +1,10 @@
 History of Asubst:
 
+21/12/2005 V2_8
+Add: checks of access right on file prior to substitution.
+Add: clean temp file in case of exception.
+Bugfix: file name was always displayed if default verbosity (since V2_7).
+
 19/12/2005 V2_7
 Add: -n (--number) and -v (--verbose) options for putting number of
      substitutions and substitution details.
