--- a/usr/asubst/History.txt
+++ b/usr/asubst/History.txt
@@ -3,6 +3,7 @@ History of Asubst:
 18/07/2007 V3_8
 Bugfix: Fix verbose output when multi-line search pattern.
 Add: -g or --grep option.
+CHANGE: Exit codes become 0 (found), 1 (not found) and 2 (error).
 
 18/07/2007 V3_7
 Bugfix: Fix and robustify the parsing of arguments.
