Fix bug un grep mode (and verbose mode) when a single line but not multi match was displayed twice. Ex echo toto | asubst -g ^toto "" -> totototo

--- a/usr/asubst/History.txt
+++ b/usr/asubst/History.txt
@@ -1,5 +1,9 @@
 History of Asubst:
 ------------------
+16/01/2008 V4.8
+Bugfix: Fix display when grep "^toto" (single line, not multi match),
+  matching string was put twice.
+
 25/11/2007 V4.7
 Bugfix: Complete help and doc on back reference and order of substrings.
 
