--- a/usr/asubst/History.txt
+++ b/usr/asubst/History.txt
@@ -1,7 +1,8 @@
 History of Asubst:
 ------------------
 16/01/2008 V4.9
-Add: Support non empty string in grep mode (put matching string when empty).
+Add: Support non empty replacing string in grep mode (put matching string when
+  replacing is empty).
 
 16/01/2008 V4.8
 Bugfix: Fix display when grep "^toto" (single line, not multi match),
