--- a/ToDo
+++ b/ToDo
@@ -2,10 +2,17 @@
 + Add it a function Init_From_Parsed (Ctx : Ctx_Type) return Xml_Dscr_Type;
   (move the code from Xml_Checker) and use it in Xml_Checker. Add checks that
   then the tree of elements can be modified, but not the prologue nor the root.
-- Make Generator Ctx the same as parser Ctx
-- Add in Generator operations for deleting attribute, element, swapping two
-  elements, modifying the prologue, changing name/comment/text of an element
-- Add a procedure Check that parses the DTD, and checks the tree versus DTD.
++ Make Generator Ctx the same as parser Ctx
++ Check/Set parsing status in Xml_Generator operations
++ Continue with Set doctype
++ Add a Get_Pi in Xml_Parser, store the Pi in the Attribute, no more text child
+  of an element
++ In Gen add a flag Append_Next to the Add_xxx of prologue
++ in Gen check that adding an element inits the prologue & Root
++ Add in Generator operations for deleting attribute, element,
+  modifying the prologue, changing name/comment/text of an element
+- Add in Generator a procedure to swap 2 elements
+- Add a procedure Check that parses the DTD, and checks the tree versus DTD
 
-No change of Xml_Parser API at all.
+No change of Xml_Parser API (except PI).
 
