--- a/usr/asubst/History.txt
+++ b/usr/asubst/History.txt
@@ -1,5 +1,8 @@
 History of Asubst:
 ------------------
+03/12/2008 V7.4
+Add: Change semantic of successive \iIJ to elsif
+
 02/12/2008 V7.3
 Add: \e in replace string for 'else' part of a \iIJ
 
