--- a/usr/asubst/History.txt
+++ b/usr/asubst/History.txt
@@ -1,5 +1,8 @@
 History of Asubst:
 ------------------
+08/12/2008 V7.6
+Add: Reject un-terminated 'if', 'elsif' or 'else' directive.
+
 05/12/2008 V7.5
 Add: \aIJ (and then) and \oIJ (or else) to 'if' syntax
 
