Improve help on grep mode, V7.7

--- a/usr/asubst/History.txt
+++ b/usr/asubst/History.txt
@@ -1,5 +1,8 @@
 History of Asubst:
 ------------------
+09/12/2008 V7.7
+Add: Online help on grep mode.
+
 08/12/2008 V7.6
 Add: Reject un-terminated 'if', 'elsif' or 'else' directive.
 
