--- a/usr/asubst/History.txt
+++ b/usr/asubst/History.txt
@@ -1,5 +1,9 @@
 History of Asubst:
 ------------------
+28/05/2009 V7.12
+Fix: Allow '^' and '$' within multiple regex (e.g. 'toto(/|$)\n').
+Fix: Don't flush remaining (non matching) line in grep mode.
+
 26/04/2009 V7.11
 Fix: Exit with code 3 on Ctrl-C while executing command.
 
