Replace -m <max> (--max=<max>) by -m <range> (--match=<range>). Fix bug, erroneously skipping line after a match but exclusion.

--- a/usr/asubst/History.txt
+++ b/usr/asubst/History.txt
@@ -1,5 +1,8 @@
 History of Asubst:
 ------------------
+10/10/2009 V8.0
+Add: Replace -m (--max) by -m (--match) for match_range
+
 08/10/2009 V7.14
 Fix: Incorrect parsing of argument -m (--max=)
 
