--- a/usr/asubst/History.txt
+++ b/usr/asubst/History.txt
@@ -1,5 +1,8 @@
 History of Asubst:
 ------------------
+13/10/2009 V8.1
+Add: Reject simultaneous -a and -u options
+
 10/10/2009 V8.0
 Add: Replace -m (--max) by -m (--match) for match_range
 
