Improve help and doc on how to mimic "grep -l"

--- a/usr/asubst/History.txt
+++ b/usr/asubst/History.txt
@@ -1,5 +1,8 @@
 History of Asubst:
 ------------------
+16/08/2010 V11.0
+Add: Improve help and doc on how to mimic "grep -l"
+
 11/08/2010 V11.0
 Add: Replace string command (\P...\p) to insert content of a file
 
