--- a/HISTORY
+++ b/HISTORY
@@ -1,4 +1,5 @@
 Major changes:
+2011/02/04: Add make State_Machine OO
 2011/02/02: Add support for http://<ip_address>
 2011/02/01: Fix in http the decoding when server replies an error (no header)
 2011/01/31: Add make Ada_Parser and Computer re-entrant
