--- a/HISTORY
+++ b/HISTORY
@@ -1,4 +1,5 @@
 Major changes:
+2011/03/01: Add different blocking modes for sending and receiving on sockets
 2011/02/28: Add timeout in Tcp_Util.Send
 2011/02/22: Add autobus package
 2011/02/16: Add improve help of als, V6.2
