--- a/HISTORY
+++ b/HISTORY
@@ -1,4 +1,5 @@
 Major changes:
+2011/03/09: Fix detection of '^' and '$' in search pattern when specific delimiter in asubst, V11.4
 2011/03/08: Fix handling of specific Delim in asubst, V11.3
 2011/03/01: Add different blocking modes for sending and receiving on sockets
 2011/02/28: Add timeout in Tcp_Util.Send
